welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:28: error: not found: value getHauteurMonde
  T(getHauteurMonde()-1)= getCouleurSol()
    ^Array2:29: error: not found: value getHauteurMonde
  recule(getHauteurMonde())
         ^